<resources>
    <string name="app_name">Pendakers</string>
    <string name="nomou">Nomor MOU</string>
    <string name="nopks">Nomor PKS</string>
    <string name="tglpks">YYYY-MM-DD</string>
    <string name="mb">Masa Berlaku</string>
    <string name="jw">Jangka Waktu</string>
    <string name="uk">Unit Kerja</string>
    <string name="mk">Mitra Kerja</string>
    <string name="tentang">Tentang</string>
    <string name="jmou">Tahapan</string>
    <string name="df">Upload data disini</string>
    <string name="value">-</string>
    <string name="todo">TODO</string>
    <string name="hint">email@gmail.com</string>
    <string name="password">password</string>
    <string name="logout">Logout</string>
    <string name="download_file">Download File</string>
    <string name="preview_file">Preview File</string>
    <string name="search">Search..</string>
    <string name="data_tidak_ditemukan">Data Tidak Ditemukan</string>

    <string-array name="tahapan">
        <item>"Nota Kesepahaman"</item>
        <item>"Nota Kesepakatan"</item>
        <item>"Kesepakatan Bersama"</item>
        <item>"Perjanjian Bersama"</item>
    </string-array>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>