<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e9e9e9"
    tools:context=".detailpksBalikpapan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/my_border">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/fieldid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00a859"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="#00a859"
                android:text="Info dan Detail"
                android:textSize="20dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldnomormou"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black"
            android:text="@string/nomou" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldnomorpks"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/nopks" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldtglpks"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tglpks"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldmb"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mb"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/fieldjw"
            android:textColor="@color/black"
            android:text="@string/jw" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/fielduk"
            android:text="@string/uk"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/fieldmk"
            android:textColor="@color/black"
            android:text="@string/mk"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/fieldjenis"
            android:textColor="@color/black"
            android:text="@string/jmou"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/fielddf"
            android:textColor="@color/black"
            android:text="@string/df"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:id="@+id/fieldtentang"
            android:textColor="@color/black"
            android:text="@string/tentang" />
    </LinearLayout>

</LinearLayout>