<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearID1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/inId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:visibility="gone" />

            <EditText
                android:id="@+id/inMOU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/nomou" />

            <EditText
                android:id="@+id/inPKS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/nopks" />

            <EditText
                android:id="@+id/inTglPKS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/tglpks" />

            <EditText
                android:id="@+id/inMB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/mb" />

            <EditText
                android:id="@+id/inJW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/jw" />

            <EditText
                android:id="@+id/inUK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/uk" />

            <EditText
                android:id="@+id/inMK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/mk" />

            <EditText
                android:id="@+id/inTENTANG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/tentang" />

            <EditText
                android:id="@+id/inJENIS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:ems="100"
                android:hint="@string/jmou" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>