<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UpdatedataSamarinda">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:background="@drawable/greenbox"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Ubah Data"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25dp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/nomorMOU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/nomou"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/nomorPKS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/nopks"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/tglPKS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/tglpks"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/masaberlaku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/mb"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/jangkawaktu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/jw"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/unitkerja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/uk"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/mitrakerja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/mk"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/tentang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/tentang"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/tahapan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/jmou"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp">
                <EditText
                    android:id="@+id/datafile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="100"
                    android:hint="@string/df"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnupdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="UBAH"
                    android:background="@drawable/my_button"
                    android:padding="10dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txtKet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Keterangan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>