<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00a859"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_tentang"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#00a859"
                    android:text="@string/tentang"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nomormou"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/black"
                android:text="@string/nomou" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nomorpks"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:text="@string/nopks" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pada Tahun"
                    android:layout_marginLeft="40dp"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_tahun"
                    android:text="Tahun"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dan tanggal"
                    android:textColor="@color/black"
                    android:layout_marginLeft="40dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_tglpks"
                    android:text="@string/tglpks"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Bekerja bersama"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_uk"
                android:textColor="@color/black"
                android:text="@string/uk"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>